# flask-jwt-api

./: app.py  first_time_run.bat  pyproject.toml  readme.md  requirements.txt  run_tests.bat  test_api.py
